2017-12-09  Ryosuke Niwa  <rniwa@webkit.org>

        iOS: Crash in Document::updateLayout() via Document::processViewport
        https://bugs.webkit.org/show_bug.cgi?id=180619
        <rdar://problem/35717575>

        Reviewed by Zalan Bujtas.

        Added a regression test for the crash.

        * media/ios/viewport-change-with-video-expected.txt: Added.
        * media/ios/viewport-change-with-video.html: Added.

2017-12-08  Zalan Bujtas  <zalan@apple.com>

        Document::updateLayout() could destroy current frame.
        https://bugs.webkit.org/show_bug.cgi?id=180525
        <rdar://problem/35906836>

        Reviewed by Simon Fraser.

        * fast/frames/crash-when-iframe-is-remove-in-eventhandler-expected.txt: Added.
        * fast/frames/crash-when-iframe-is-remove-in-eventhandler.html: Added.

2017-12-08  Youenn Fablet  <youenn@apple.com>

        Service Worker should use a correct user agent
        https://bugs.webkit.org/show_bug.cgi?id=180566
        <rdar://problem/35926295>

        Reviewed by Chris Dumez.

        * http/wpt/service-workers/useragent-worker.js: Added.
        (async.doTest):
        * http/wpt/service-workers/useragent.https-expected.txt: Added.
        * http/wpt/service-workers/useragent.https.html: Added.

2017-12-07  Simon Fraser  <simon.fraser@apple.com>

        Wrong caret position for input field inside a fixed position parent on iOS 11
        https://bugs.webkit.org/show_bug.cgi?id=176896
        rdar://problem/33726145

        Reviewed by Tim Horton.
        
        Test that focuses an input inside position:fixed, then moves focus to the next
        input. This was the most reliable way I could find of triggering the bug.
        The test dumps the caret rect.

        * fast/visual-viewport/ios/caret-after-focus-in-fixed-expected.txt: Added.
        * fast/visual-viewport/ios/caret-after-focus-in-fixed.html: Added.

2017-12-06  Simon Fraser  <simon.fraser@apple.com>
